--- a/src/app/pages/vacinar/vacinar.component.html
+++ b/src/app/pages/vacinar/vacinar.component.html
@@ -5,30 +5,44 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="cpfRne" style="float: left;">CPF ou RNE:</label>
-      <input type="text" class="form-control" id="cpfRne">
+      <input type="text" class="form-control" id="cpfRne" formControlName="cpfRne" [class]="(submitted && formulario.get('cpfRne').errors) ||
+            (formulario.get('cpfRne').errors && formulario.get('cpfRne').dirty) ? 'is-invalid' :
+            formulario.get('cpfRne').dirty ? 'is-valid' : ''">
+      <div *ngIf="formulario.get('cpfRne').errors?.required" class="invalid-feedback">CPF é obrigatório</div>
     </div>
     <div class="form-group  col-md-6">
       <label for="pacienteId" style="float: left;">Pacientes:</label>
-      <select class="form-control" formControlName="pacienteId" name="pacienteId" id="pacienteId">
+      <select class="form-control" formControlName="pacienteId" name="pacienteId" id="pacienteId" [class]="(submitted && formulario.get('pacienteId').errors) ||
+      (formulario.get('pacienteId').errors && formulario.get('pacienteId').dirty) ? 'is-invalid' :
+      formulario.get('pacienteId').dirty ? 'is-valid' : ''">
         <option *ngFor="let paciente of pacientes" [value]="paciente.id">{{paciente.nome}}</option>
       </select>
+      <div *ngIf="formulario.get('pacienteId').errors?.required" class="invalid-feedback">Paciente é obrigatório</div>
     </div>
   </div>
 
   <div class="form-row">
     <div class="form-group  col-md-6">
       <label for="vacinaId" style="float: left;">Vacinas:</label>
-      <select class="form-control" formControlName="vacinaId" name="vacinaId" id="vacinaId">
+      <select class="form-control" formControlName="vacinaId" name="vacinaId" id="vacinaId" [class]="(submitted && formulario.get('vacinaId').errors) ||
+      (formulario.get('vacinaId').errors && formulario.get('vacinaId').dirty) ? 'is-invalid' :
+      formulario.get('vacinaId').dirty ? 'is-valid' : ''">
         <option *ngFor="let vacina of vacinas" [value]="vacina.id">{{vacina.nome}}</option>
       </select>
+      <div *ngIf="formulario.get('vacinaId').errors?.required" class="invalid-feedback">Vacina é obrigatório</div>
     </div>
     <div class="form-group col-md-6">
-      <label for="doseId">Dose:</label>
-      <select id="doseId" class="form-control" formControlName="doseId">
-        <option selected value="1">Dose 1</option>
-        <option value="2">Dose 2</option>
-        <option value="3">Dose 3</option>
+      <label for="dose">Dose:</label>
+      <select id="dose" class="form-control" formControlName="dose" [class]="(submitted && formulario.get('dose').errors) ||
+      (formulario.get('dose').errors && formulario.get('dose').dirty) ? 'is-invalid' :
+      formulario.get('dose').dirty ? 'is-valid' : ''">
+        <option selected value="DOSEUNICA">Dose única</option>
+        <option value="PRIMEIRADOSE">1° Dose</option>
+        <option value="SEGUNDADOSE">2° Dose</option>
+        <option value="TERCEIRAADOSE">3° Dose</option>
+        <option value="REFORCO">Reforço</option>
       </select>
+      <div *ngIf="formulario.get('dose').errors?.required" class="invalid-feedback">Dose é obrigatório</div>
     </div>
   </div>
 
@@ -39,9 +53,12 @@
     </div>
     <div class="form-group  col-md-6">
       <label for="loteId" style="float: left;">lotes:</label>
-      <select class="form-control" formControlName="loteId" name="loteId" id="loteId">
+      <select class="form-control" formControlName="loteId" name="loteId" id="loteId" [class]="(submitted && formulario.get('loteId').errors) ||
+      (formulario.get('loteId').errors && formulario.get('loteId').dirty) ? 'is-invalid' :
+      formulario.get('loteId').dirty ? 'is-valid' : ''">
         <option *ngFor="let lote of lotes" [value]="lote.id">{{lote.codigo}}</option>
       </select>
+      <div *ngIf="formulario.get('loteId').errors?.required" class="invalid-feedback">Lote é obrigatório</div>
     </div>
   </div>
 
