--- a/src/app/pages/login-admin/login-admin.component.html
+++ b/src/app/pages/login-admin/login-admin.component.html
@@ -1,18 +1,23 @@
-<div class="card text-center" style="width: 18rem; margin: 50px;">
-  <div class="card-body">
-    <h2 class="card-title">Login Adminstrador</h2>
-    <div class="card-text">
-      <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1" style="float: left;" required>E-mail:</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1" style="float: left;">Senha:</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <a routerLink="/dashboard-admin"><button type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button></a>
-      </form>
+<app-header-auth [caminho]="3"></app-header-auth>
+
+<div class="container">
+  <div class="card text-center" style="width: 18rem; margin: 50px;">
+    <div class="card-body">
+      <h2 class="card-title">Login Adminstrador</h2>
+      <div class="card-text">
+        <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1" style="float: left;" required>E-mail:</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1" style="float: left;">Senha:</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+          </div>
+          <a routerLink="/dashboard-admin"><button type="submit" class="btn btn-primary entrar"
+              style="width: 100%; margin-left: 0px;">Entrar</button></a>
+        </form>
+      </div>
     </div>
   </div>
 </div>
