--- a/src/app/pages/login-funcionario/login-funcionario.component.html
+++ b/src/app/pages/login-funcionario/login-funcionario.component.html
@@ -1,19 +1,25 @@
-<div class="card text-center" style="width: 18rem; margin: 50px;">
-  <div class="card-body">
-    <h2 class="card-title">Login Funcionário</h2>
-    <div class="card-text">
-      <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1" style="float: left;">E-mail:</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+<app-header-auth [caminho]="2"></app-header-auth>
+
+<div class="container">
+
+  <div class="container">
+    <div class="card text-center" style="width: 18rem; margin: 50px;">
+      <div class="card-body">
+        <h2 class="card-title">Login Funcionário</h2>
+        <div class="card-text">
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1" style="float: left;">E-mail:</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1" style="float: left;">Senha: </label>
+              <input type="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <a routerLink="/dashboard-funcionario"><button type="submit" class="btn btn-primary entrar"
+                style="width: 100%; margin-left: 0px;">Entrar</button></a>
+          </form>
         </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1" style="float: left;">Senha: </label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <a routerLink="/dashboard-funcionario"><button type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button></a>
-        <a routerLink="/cadastro/funcionario"><button type="button" class="btn btn-primary cadastro" style="width: 100%; margin-left: 0px; margin-top: 10px;">Fazer Cadastro</button></a>
-      </form>
+      </div>
     </div>
   </div>
-</div>
