--- a/src/app/pages/login-paciente/login-paciente.component.html
+++ b/src/app/pages/login-paciente/login-paciente.component.html
@@ -1,18 +1,24 @@
-<div class="card text-center" style="width: 18rem; margin: 50px;">
-  <div class="card-body">
-    <h2 class="card-title">Login Paciente</h2>
-    <div class="card-text">
-      <form>
-        <div class="form-group">
-          <label for="exampleInputEmail" style="float: left;">E-mail: </label>
-          <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1" style="float: left;">Senha: </label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <button routerLink="/dashboard-paciente" type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button>
-      </form>
+<app-header-auth [caminho]="1"></app-header-auth>
+
+<div class="container">
+  <div class="card text-center" style="width: 18rem; margin: 50px;">
+    <div class="card-body">
+      <h2 class="card-title">Login Paciente</h2>
+      <div class="card-text">
+        <form>
+          <div class="form-group">
+            <label for="exampleInputEmail" style="float: left;">E-mail: </label>
+            <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1" style="float: left;">Senha: </label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+          </div>
+          <button routerLink="/dashboard-paciente" type="submit" class="btn btn-primary entrar"
+            style="width: 100%; margin-left: 0px;">Entrar</button>
+        </form>
+        <a routerLink="/paciente">Cadastrar</a>
+      </div>
     </div>
   </div>
 </div>
