Ajuste na tela Vacinar

--- a/src/app/pages/paciente/editar-perfil-paciente/editar-perfil-paciente.component.html
+++ b/src/app/pages/paciente/editar-perfil-paciente/editar-perfil-paciente.component.html
@@ -170,7 +170,7 @@
 
     <div class="form-row">
       <div class="form-group col-md-6">
-        <button type="reset" class="btn btn-secondary entrar col-12">Limpar</button>
+        <a routerLink="/caderneta"  class="btn btn-secondary entrar col-12"> Cancelar </a>
       </div>
       <div class="form-group col-md-6">
         <button type="submit" class="btn btn-success entrar col-12">Atualizar</button>
