--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark sticky-top bg-success flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" *ngIf="caminho == '1'" href="/dashboard-paciente">IMUNO</a>
+  <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" *ngIf="caminho == '1'" href="/caderneta">IMUNO</a>
   <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" *ngIf="caminho == '2'" href="/dashboard-funcionario">IMUNO</a>
   <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" *ngIf="caminho == '3'" href="/dashboard-admin">IMUNO</a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse"
@@ -9,6 +9,7 @@
 
   <ul class="nav justify-content-end ">
     <li class="nav-item text-nowrap">
+      <a class="nav-link text-white" *ngIf="caminhoLogout == '1'" routerLink="/paciente/1">Editar Perfil</a>
       <a class="nav-link text-white" *ngIf="caminhoLogout == '2'" routerLink="/funcionario/1">Editar Perfil</a>
     </li>
     <li class="nav-item text-nowrap">
