Ajuste para o login

--- a/src/app/pages/caderneta-vacinacao/caderneta-vacinacao.component.html
+++ b/src/app/pages/caderneta-vacinacao/caderneta-vacinacao.component.html
@@ -1,4 +1,4 @@
-<app-header [caminho]="1" [caminhoLogout]="1"></app-header>
+<!-- <app-header [caminho]="1" [caminhoLogout]="1"></app-header> -->
 
 <div class="container">
   <div class="container-sm p-4 mt-5 bg-white">
