--- a/src/app/pages/paciente/cadastrar-paciente/cadastrar-paciente.component.html
+++ b/src/app/pages/paciente/cadastrar-paciente/cadastrar-paciente.component.html
@@ -1,4 +1,4 @@
-<app-header-auth [caminho]="1"></app-header-auth>
+<!-- <app-header-auth [caminho]="1"></app-header-auth> -->
 
 <div class="container">
   <form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="cadastrar()">
