--- a/src/app/pages/dashboard-paciente/dashboard-paciente.component.html
+++ b/src/app/pages/dashboard-paciente/dashboard-paciente.component.html
@@ -1,4 +1,4 @@
-<app-header [caminho]="1" [caminhoLogout]="1"></app-header>
+<!-- <app-header [caminho]="1" [caminhoLogout]="1"></app-header> -->
 
 <div class="container">
   <div class="row" style="justify-content: center; margin-top: 15%;">
