--- a/src/app/pages/funcionario/cadastrar-funcionario/cadastrar-funcionario.component.html
+++ b/src/app/pages/funcionario/cadastrar-funcionario/cadastrar-funcionario.component.html
@@ -1,4 +1,4 @@
-<app-header [caminho]="3" [caminhoLogout]="3"></app-header>
+<!-- <app-header [caminho]="3" [caminhoLogout]="3"></app-header> -->
 
 <div class="container">
   <form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="cadastrar()">
