--- a/src/app/pages/funcionario/editar-perfil-funcionario/editar-perfil-funcionario.component.html
+++ b/src/app/pages/funcionario/editar-perfil-funcionario/editar-perfil-funcionario.component.html
@@ -1,4 +1,4 @@
-<app-header [caminho]="2" [caminhoLogout]="2"></app-header>
+<!-- <app-header [caminho]="2" [caminhoLogout]="2"></app-header> -->
 
 <div class="container">
   <form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="atualizar()">
