--- a/src/app/pages/paciente/editar-perfil-paciente/editar-perfil-paciente.component.html
+++ b/src/app/pages/paciente/editar-perfil-paciente/editar-perfil-paciente.component.html
@@ -1,4 +1,4 @@
-<app-header [caminho]="1" [caminhoLogout]="1"></app-header>
+<!-- <app-header [caminho]="1" [caminhoLogout]="1"></app-header> -->
 
 <div class="container">
 
