--- a/src/app/pages/posto/cadastrar-posto/cadastrar-posto.component.html
+++ b/src/app/pages/posto/cadastrar-posto/cadastrar-posto.component.html
@@ -1,4 +1,4 @@
-<app-header [caminho]="3" [caminhoLogout]="3"></app-header>
+<!-- <app-header [caminho]="3" [caminhoLogout]="3"></app-header> -->
 
 <div class="container">
 
