--- a/src/app/pages/vacinar/vacinar.component.html
+++ b/src/app/pages/vacinar/vacinar.component.html
@@ -1,4 +1,4 @@
-<app-header [caminho]="2" [caminhoLogout]="2"></app-header>
+<!-- <app-header [caminho]="2" [caminhoLogout]="2"></app-header> -->
 
 <div class="container">
 
