--- a/src/app/seguranca/login-form/login-form.component.html
+++ b/src/app/seguranca/login-form/login-form.component.html
@@ -1,24 +1,26 @@
 <div class="container">
-    <div class="row">
-      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card card-signin my-5">
-          <div class="card-body">
-            <h5 class="card-title text-center">Sistema Digital House</h5>
-            <form class="form-signin" [formGroup]="formulario" (ngSubmit)="logar()">
-              <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus formControlName="login">
-                <label for="inputEmail">Nome de Usuário</label>
-              </div>
-
-              <div class="form-label-group">
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required formControlName="senha">
-                <label for="inputPassword">Senha</label>
-              </div>
-              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Entrar</button>
-              <hr class="my-4">             
-            </form>
+  <div class="card text-center" style="width: 18rem; margin: 50px;">
+    <div class="card-body">
+      <h2 class="card-title">Login</h2>
+      <div class="card-text">
+        <form class="form-signin" [formGroup]="formulario" (ngSubmit)="logar()">
+          <div class="form-label-group">
+            <label for="inputEmail" style="float: left;">E-mail: </label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus
+              formControlName="login">
           </div>
-        </div>
+          <br>
+          <div class="form-label-group">
+            <label for="inputPassword" style="float: left;">Senha: </label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required
+            formControlName="senha">
+          </div>
+          <br>
+          <button class="btn btn-success entrar" type="submit" style="width: 100%; margin-left: 0px;">Entrar</button>
+        </form>
+        <br>
+        <a routerLink="/paciente">Cadastrar Paciente</a>
       </div>
     </div>
   </div>
+</div>
