--- a/src/app/pages/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/pages/dashboard-admin/dashboard-admin.component.html
@@ -2,13 +2,11 @@
 
   <form class="container-sm p-4 mt-5  bg-white">
     <div class="form-row">
-      <button type="button" routerLink="/funcionario" class="btn btn-success btn-lg btn-block">Cadastrar
-        Funcionário</button>
-      <button type="button" routerLink="/lote" class="btn btn-success btn-lg btn-block">Cadastrar Lote de
-        Vacina</button>
+      <button type="button" routerLink="/funcionario" class="btn btn-success btn-lg btn-block">Cadastrar Funcionário</button>
+      <button type="button" routerLink="/vacinas" class="btn btn-success btn-lg btn-block">Vacinas</button>
+      <button type="button" routerLink="/lotes" class="btn btn-success btn-lg btn-block">Lotes</button>
       <button type="button" routerLink="/posto" class="btn btn-success btn-lg btn-block">Cadastrar Posto</button>
       <button type="button" routerLink="/posto/1" class="btn btn-success btn-lg btn-block">Editar Posto</button>
-      <button type="button" routerLink="/vacina" class="btn btn-success btn-lg btn-block">Cadastrar Vacina</button>
     </div>
   </form>
 </div>
