--- a/src/app/pages/lote/cadastrar-lote/cadastrar-lote.component.html
+++ b/src/app/pages/lote/cadastrar-lote/cadastrar-lote.component.html
@@ -1,5 +1,3 @@
-<!-- <app-header [caminho]="3" [caminhoLogout]="3"></app-header> -->
-
 <div class="container">
   <form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="cadastrar()">
 
@@ -63,15 +61,12 @@
 
     <div class="form-row">
       <div class="form-group col-md-6">
-        <button type="reset" class="btn btn-secondary entrar col-12">Limpar</button>
+        <a href="lotes" class="btn btn-secondary entrar col-12">Limpar</a>
       </div>
       <div class="form-group col-md-6">
         <button type="submit" class="btn btn-success entrar col-12">Cadastrar</button>
       </div>
     </div>
-
-
-
   </form>
 
 </div>
