--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <app-nav-bar *ngIf="exibirNavbar"></app-nav-bar>
 
 <router-outlet></router-outlet>
+
+<p-toast position="bottom-center" key="toast"></p-toast>
+
+<p-confirmDialog #cd header="Confirmar" icon="pi pi-exclamation-triangle">
+    <p-footer>
+        <button type="button" pButton icon="pi pi-times" label="Não" (click)="cd.reject()"></button>
+        <button type="button" pButton icon="pi pi-check" label="Sim" (click)="cd.accept()"></button>
+    </p-footer>
+</p-confirmDialog>
+
