--- a/src/app/pages/vacina/editar-vacina/editar-vacina.component.html
+++ b/src/app/pages/vacina/editar-vacina/editar-vacina.component.html
@@ -1,9 +1,8 @@
-<!-- <app-header [caminho]="3" [caminhoLogout]="3"></app-header> -->
 
 <div class="container">
-  <form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="cadastrar()">
+  <form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="atualizar()">
 
-    <h2>Cadastrar Vacina</h2>
+    <h2>Editar Vacina</h2>
 
     <div class="form-row">
       <div class="form-group col-md-12">
