--- a/src/app/pages/lote/editar-lote/editar-lote.component.html
+++ b/src/app/pages/lote/editar-lote/editar-lote.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="atualizar()">
 
-    <h2>Cadastrar Lote</h2>
+    <h2>Editar Lote</h2>
 
     <div class="form-row">
       <div class="form-group  col-md-6">
